vfpl_parser/src/snapshots/vfpl_parser__test__terminate.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Terminate {
        span: Span {
            start: 0,
            end: 0,
        },
    },
)
