vfpl_parser/src/snapshots/vfpl_parser__test__typed_ident_absent.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    TypedIdent {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "name",
        ty: Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Absent,
        },
    },
)
