vfpl_parser/src/snapshots/vfpl_parser__test__while_loop_no_body.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    While {
        span: Span {
            start: 0,
            end: 0,
        },
        cond: Literal(
            Literal {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: True,
            },
        ),
        body: Body {
            span: Span {
                start: 0,
                end: 0,
            },
            stmts: [],
        },
    },
)
