vfpl_parser/src/snapshots/vfpl_parser__test__while_stmt_with_body.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    While(
        While {
            span: Span {
                start: 0,
                end: 0,
            },
            cond: Comparison(
                Comparison {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    lhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Absent,
                        },
                    ),
                    rhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: False,
                        },
                    ),
                    kind: Eq,
                },
            ),
            body: Body {
                span: Span {
                    start: 0,
                    end: 0,
                },
                stmts: [
                    Expr(
                        ArithmeticOp(
                            ArithmeticOp {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                lhs: Literal(
                                    Literal {
                                        span: Span {
                                            start: 0,
                                            end: 0,
                                        },
                                        kind: Int(
                                            9,
                                        ),
                                    },
                                ),
                                rhs: Literal(
                                    Literal {
                                        span: Span {
                                            start: 0,
                                            end: 0,
                                        },
                                        kind: Ident(
                                            "A",
                                        ),
                                    },
                                ),
                                kind: Add,
                            },
                        ),
                    ),
                ],
            },
        },
    ),
)
